force-app/main/default/objects/PopcornFeatureElement__c/PopcornFeatureElement__c.object-meta.xml
<CustomObject>
    <label>Scenario</label>
    <nameField>
        <label>Scenario Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenarios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>