force-app/main/default/objects/PopcornFeatureElement__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <referenceTo>PopcornFeature__c</referenceTo>
    <relationshipName>FeatureElements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>