force-app/main/default/objects/PopcornFeatureElement__c/fields/LongName__c.field-meta.xml
<CustomField>
    <fullName>LongName__c</fullName>
    <externalId>true</externalId>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>