force-app/main/default/objects/PopcornFeatureElement__c/fields/ScrenarioRef__c.field-meta.xml
<CustomField>
    <fullName>ScrenarioRef__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Screnario Ref</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>