force-app/main/default/objects/PopcornFeatureElement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Feature__c</columns>
    <columns>NAME</columns>
    <columns>LongName__c</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>